<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:context="nl.rug.www.rugsummerschools.controller.LoginActivity">

    <ImageView
        android:id="@+id/login_rug_logo"
        android:layout_margin="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_rug_white"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_rug_logo"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:text="@string/welcome_to_swapp"/>

    <EditText
        android:id="@+id/code_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="#ffffff"
        android:hint="@string/enter_your_code_hint"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="#ffffff"
        android:text="@string/log_in_button"
        android:textColor="#000000"/>

</RelativeLayout>
