<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_announcement"
        android:icon="@drawable/ic_announcement"
        android:title="@string/notice"/>

    <item
        android:id="@+id/navigation_general"
        android:icon="@drawable/ic_general_info"
        android:title="@string/info"/>

    <item
        android:id="@+id/navigation_lecturer"
        android:icon="@drawable/ic_lecturer"
        android:title="@string/staff"/>

    <item
        android:id="@+id/navigation_time_table"
        android:icon="@drawable/ic_time_table"
        android:title="@string/schedule"/>

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum"
        android:title="@string/forum"/>

</menu>
